load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

# 代码补全
refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//waymax.cpp/...": "",
        "//test/...": "",
    },
)

cc_test(
    name = "iterator_test",
    srcs = ["iterator_test.cc"],
    linkstatic = True,
)

cc_test(
    name = "vis_test",
    srcs = ["vis_test.cc"],
    linkstatic = True,
    deps = [
        "//waymax.cpp",
        "@googletest//:gtest",
    ],
)
