cc_library(
    name = "waymax.cpp",
    srcs = ["visualization.cc"],
    hdrs = ["visualization.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//waymax.cpp/geometry",
        "@abseil-cpp//absl/types:span",
        "@stb//:stb_image",
        "@stb//:stb_image_write",
    ],
)
