cc_library(
    name = "waymax.cpp",
    srcs = [
        "datatypes.cc",
        "dynamics.cc",
        "visualization.cc",
    ],
    hdrs = [
        "datatypes.h",
        "dynamics.h",
        "visualization.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//waymax.cpp/geometry",
        "@abseil-cpp//absl/types:span",
        "@stb//:stb_image",
        "@stb//:stb_image_write",
    ],
)
