cc_test(
    name = "box2d_test",
    srcs = ["box2d_test.cc"],
    linkstatic = True,
    deps = [
        "//waymax.cpp/geometry:geometry_kernels",
        "@abseil-cpp//absl/log:absl_check",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "bvh_test",
    srcs = ["bvh_test.cc"],
    linkstatic = True,
    deps = [
        "//waymax.cpp/geometry:geometry_kernels",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/random",
        "@googletest//:gtest",
    ],
)
